# Weighted-Product-of-Experts

./: .gitignore  README.md  naivebayes.py  pyproject.toml  transfomer_train.py  transformer.py  utils.py  weighted_product_of_experts.py
ckpt/: pretrained_enwik8_dim64.pth
data/math_dataset/: test.txt
dataset/: dataset.py
example_scripts/alpha_optimize/: alpha_optimize.sh  alpha_optimize_llm.sh  alpha_optimize_transformer.sh
example_scripts/train/: enwik8_train_128.sh  enwik8_train_256.sh  enwik8_train_64.sh
