[project]
name = "language-modeling-is-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpustat>=1.1.1",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
